chore: delete unnecessary dependencies