@@ -8,8 +8,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 @Service
 @RequiredArgsConstructor
@@ -17,7 +15,7 @@ public class KeywordService {
     private final KeywordRepository keywordRepository;
 
     @Transactional
-    public void searchBlogPosts(String keyword) {
+    public void saveOrUpdateKeyword(String keyword) {
         this.keywordRepository.findByKeyword(keyword)
                 .ifPresentOrElse(
                         e -> this.keywordRepository.save(e.increaseCounter()),
@@ -27,11 +25,9 @@ public class KeywordService {
 
     @Transactional(readOnly = true)
     public List<KeywordResponseDto> getPopularKeywords() {
-//        List<Keyword> entities = this.keywordRepository.findPopularKeywords(10);
-//
-//        return IntStream.range(0, entities.size())
-//                .mapToObj(i -> KeywordResponseDto.from(i, entities.get(i).getKeyword(), entities.get(i).getCounter()))
-//                .collect(Collectors.toList());
-        return List.of(KeywordResponseDto.from(1, "hi", 1));
+        return keywordRepository.findTop10ByOrderByCounterDesc()
+                .stream()
+                .map(KeywordResponseDto::from)
+                .toList();
     }
 }
